feat: remove polling and add new endpoints
